# agentleh-app

./: .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
api/: auth.py  deps.py  invite_og.py  main.py
api/routes/: admin.py  agents.py  auth.py  bridges.py  chat.py  coupons.py  dashboard.py  google_oauth.py  integrations.py  invites.py  onboarding.py  payment.py  telegram_webhook.py  tenants.py  voices.py
config/: settings.development.yml  settings.production.yml  settings.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AgentScheduledTasksPanel.tsx  AuditTab.tsx  BridgesPanel.tsx  ChatPane.tsx  DeleteAgentModal.tsx  IntegrationsPanel.tsx  IntegrationsTab.tsx  LanguageSwitcher.tsx  Layout.tsx  MobileDrawer.tsx  ProfileMenu.tsx  ProvisionProgressBar.tsx  RemindersTab.tsx  RequiredMark.tsx  StepIndicator.tsx  SwitchModelModal.tsx  TenantName.tsx  TenantSwitcher.tsx  ThemeSwitcher.tsx  UsageTab.tsx  VoicePicker.tsx  WorkspaceValueCard.tsx  icons.tsx
frontend/src/lib/: api.ts  format.ts  i18n.tsx  labels.ts  logrocket.ts  prefsCookie.ts  supabase.ts  theme.tsx  themeStore.ts  types.ts  useBackDismiss.ts  useDocumentTitle.ts
frontend/src/pages/: AdminPage.tsx  DashboardPage.tsx  InviteAcceptPage.tsx  (+5 more)
lib/: config.py  coupons.py  db.py
scripts/: dev.py
services/: chat_proxy.py  email.py  google_oauth.py  meter_client.py  payment.py  provisioning.py  secret_manager.py  shortlink.py  telegram.py  telegram_deeplink.py  telegram_manager.py  whatsapp.py
tests/: test_admin_agent_model.py  test_admin_analytics.py  test_admin_delete_agent_bypass.py  test_admin_overview_agent_used.py  test_agent_creator_attribution.py  test_auth.py  test_auth_errors.py  test_bridges.py  test_coupons.py  test_google_oauth.py  test_integrations.py  test_invite_og.py  test_invites.py  test_shortlink.py
